--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: ekmek_teknesi
 description: "Anneniz için ekmek sipariş yönetimi uygulaması."
-publish_to: 'none' 
+publish_to: 'none'
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.3.0 <4.0.0' # Genellikle bu aralık daha güvenlidir.
+  sdk: '>=3.3.0 <4.0.0'
 
 dependencies:
   flutter:
@@ -15,7 +15,7 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
-  intl: ^0.20.2 # Bir önceki adımda 0.20.2'ye yükseltmiştik, tutarlılık için onu kullanıyorum.
+  intl: ^0.20.2
   sqflite: ^2.3.3
   path: ^1.9.0
   uuid: ^4.4.0
@@ -24,27 +24,25 @@ dependencies:
   timezone: ^0.9.3
   file_picker: ^8.0.0+1
   permission_handler: ^11.3.1
-  file_saver: ^0.2.12
+  # GÜNCELLENDİ: file_saver kaldırıldı, share_plus eklendi.
+  share_plus: ^9.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   
-  # YENİ EKLENDİ: Uygulama ikonlarını oluşturmak için.
   flutter_launcher_icons: ^0.13.1
-
+  
   flutter_lints: ^3.0.0
 
-# Bu bölüm, ikon oluşturma paketinin ayarlarını içerir.
 flutter_launcher_icons:
-  android: "launcher_icon"
-  ios: false # iOS için de ikon oluşturur (zararı olmaz)
-  image_path: "assets/images/icon.png" # Lütfen ikon dosyanızın bu yolda olduğundan emin olun.
-  min_sdk_android: 21 # Minimum Android sürümü
+  android: true
+  ios: false
+  image_path: "assets/images/icon.png"
+  min_sdk_android: 21
 
 flutter:
   uses-material-design: true
 
-  # Varlıklar bölümü
   assets:
     - assets/images/
