--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   permission_handler: ^11.3.1
   # GÜNCELLENDİ: file_saver kaldırıldı, share_plus eklendi.
   share_plus: ^9.0.0
+  fl_chart: 0.68.0
 
 dev_dependencies:
   flutter_test:
